[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Main_Menu.PNG" type="Texture" id=1]
[ext_resource path="res://Fonts/SunnyspellsRegular-MV9ze.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/UwUFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Screens/Button.gd" type="Script" id=4]
[ext_resource path="res://Music/the-cradle-of-your-soul-15700.mp3" type="AudioStream" id=5]
[ext_resource path="res://Screens/AudioStreamPlayer.gd" type="Script" id=6]
[ext_resource path="res://Screens/SettingsButton.gd" type="Script" id=7]
[ext_resource path="res://Assets/Exit Button.png" type="Texture" id=8]
[ext_resource path="res://Assets/settingsMenuStyleBoxTest.tres" type="StyleBox" id=10]

[sub_resource type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 250
font_data = ExtResource( 2 )

[node name="Node2D2" type="Node2D"]

[node name="Control" type="Control" parent="."]
margin_right = 1026.0
margin_bottom = 598.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_left = 0.00682261
anchor_right = 0.00682261
margin_right = 1940.0
margin_bottom = 1098.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Control"]
margin_left = 203.0
margin_top = 223.0
margin_right = 647.0
margin_bottom = 898.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="Control/VBoxContainer2"]
margin_right = 444.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.980392, 0.65098, 0.552941, 1 )

[node name="ColorRect2" type="ColorRect" parent="Control/VBoxContainer2"]
margin_top = 178.0
margin_right = 444.0
margin_bottom = 317.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.980392, 0.65098, 0.552941, 1 )

[node name="ColorRect3" type="ColorRect" parent="Control/VBoxContainer2"]
margin_top = 357.0
margin_right = 444.0
margin_bottom = 496.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.980392, 0.65098, 0.552941, 1 )

[node name="ColorRect4" type="ColorRect" parent="Control/VBoxContainer2"]
margin_top = 536.0
margin_right = 444.0
margin_bottom = 675.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.980392, 0.65098, 0.552941, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_left = 221.0
margin_top = 264.0
margin_right = 615.0
margin_bottom = 880.0
custom_constants/separation = 116
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PlayButton2" type="Button" parent="Control/VBoxContainer"]
margin_right = 394.0
margin_bottom = 63.0
rect_min_size = Vector2( 50, 50 )
theme = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.819608, 0.545098, 1 )
custom_colors/font_color_pressed = Color( 1, 0.819608, 0.545098, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Play"
flat = true
script = ExtResource( 4 )

[node name="SettingsButton" type="Button" parent="Control/VBoxContainer"]
light_mask = 513
margin_top = 179.0
margin_right = 394.0
margin_bottom = 242.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.819608, 0.545098, 1 )
custom_colors/font_color_pressed = Color( 1, 0.819608, 0.545098, 1 )
custom_constants/hseparation = 0
custom_fonts/font = ExtResource( 3 )
text = "Settings"
flat = true
script = ExtResource( 7 )

[node name="TutorialButton" type="Button" parent="Control/VBoxContainer"]
light_mask = 513
margin_top = 358.0
margin_right = 394.0
margin_bottom = 421.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.819608, 0.545098, 1 )
custom_colors/font_color_pressed = Color( 1, 0.819608, 0.545098, 1 )
custom_constants/hseparation = 0
custom_fonts/font = ExtResource( 3 )
text = "Tutorial"
flat = true
script = ExtResource( 4 )

[node name="LeaderboardButton" type="Button" parent="Control/VBoxContainer"]
light_mask = 513
margin_top = 537.0
margin_right = 394.0
margin_bottom = 600.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.819608, 0.545098, 1 )
custom_colors/font_color_pressed = Color( 1, 0.819608, 0.545098, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Leaderboard"
flat = true
script = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="Control"]
visible = false
margin_left = 21.0
margin_top = -66.0
margin_right = 527.0
margin_bottom = 124.0

[node name="RichTextLabel2" type="RichTextLabel" parent="Control/CenterContainer"]
visible = false
margin_left = 253.0
margin_top = 95.0
margin_right = 253.0
margin_bottom = 95.0
size_flags_horizontal = 7
size_flags_vertical = 7
size_flags_stretch_ratio = 0.0
custom_colors/default_color = Color( 0.929412, 0.380392, 0.113725, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "ROB"

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
margin_left = 270.0
margin_top = 24.0
margin_right = 604.0
margin_bottom = 226.0
custom_colors/default_color = Color( 0.929412, 0.380392, 0.113725, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "ROB"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource( 5 )
volume_db = -17.479
autoplay = true
script = ExtResource( 6 )

[node name="SettingsPopupMenu" type="WindowDialog" parent="Control"]
visible = true
margin_left = 61.0
margin_top = 106.0
margin_right = 1705.0
margin_bottom = 1033.0
custom_colors/title_color = Color( 0, 0, 0, 1 )
custom_constants/title_height = -100
custom_fonts/title_font = ExtResource( 3 )
custom_icons/close_highlight = ExtResource( 8 )
custom_icons/close = ExtResource( 8 )
custom_styles/panel = ExtResource( 10 )
window_title = "THERE ARE NO SETTINGS"

[node name="VBoxContainer3" type="VBoxContainer" parent="Control/SettingsPopupMenu"]
visible = false
margin_top = -50.0
margin_right = 1638.0
margin_bottom = 1050.0
rect_min_size = Vector2( 100, 100 )
custom_constants/separation = 0

[node name="Panel" type="Panel" parent="Control/SettingsPopupMenu/VBoxContainer3"]
margin_right = 1638.0
margin_bottom = 100.0
rect_min_size = Vector2( 50, 100 )
custom_styles/panel = ExtResource( 10 )

[node name="Panel2" type="Panel" parent="Control/SettingsPopupMenu/VBoxContainer3"]
margin_top = 100.0
margin_right = 1638.0
margin_bottom = 200.0
rect_min_size = Vector2( 50, 100 )
custom_styles/panel = ExtResource( 10 )

[node name="ColorRect2" type="ColorRect" parent="Control/SettingsPopupMenu/VBoxContainer3"]
margin_top = 200.0
margin_right = 1638.0
margin_bottom = 1100.0
rect_min_size = Vector2( 50, 900 )
color = Color( 0.886275, 0.45098, 0.317647, 1 )

[connection signal="pressed" from="Control/VBoxContainer/PlayButton2" to="Control/VBoxContainer/PlayButton2" method="_on_PlayButton2_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/SettingsButton" to="Control/VBoxContainer/SettingsButton" method="_on_Button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/TutorialButton" to="Control/VBoxContainer/TutorialButton" method="_on_Button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/LeaderboardButton" to="Control/VBoxContainer/LeaderboardButton" method="_on_Button_pressed"]
